# AuraOS-aura_core-

./: .gitignore  README.md  advanced_sales_report.xlsx  pyproject.toml  sales_report.docx  sample.md  temp_content.txt
src/aura_core/: cli.py  foreman.py
src/aura_core/apprentices/: archiver.py  cache_manager.py  chart_creator.py  doc_creator.py  doc_reader.py  file_manager.py  file_reader.py  file_writer.py  image_finder.py  pdf_converter.py  pdf_reader.py  process_manager.py  slide_creator.py  spreadsheet_creator.py  spreadsheet_reader.py  summarizer.py  web_researcher.py
